tests/types/errors/assign_to_const.mog
const value i32 = 1
value = 2
